Сверстал верхнее меню сайта

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
 @import url(reset.css);
 
+body {
+    font: 13px/1.4 Arial, Verdana, Tahoma, sans-serif;
+}
+
 .clear {
     clear: both;
+}
+
+a {
+    text-decoration: none;
 }
 
 #header {
@@ -26,4 +34,32 @@
     float: right;
     margin-top: 34px;
     margin-right: 10px;
+}
+
+#top-menu {
+    min-width: 960px;
+    height: 49px;
+    background: url(../images/top-menu-bg.png) repeat-x;
+}
+
+#inner-menu {
+    min-width: 960px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#inner-menu ul li {
+    float: left;
+    text-transform: uppercase;
+}
+
+#inner-menu a {
+    color: #ebebeb;
+    font-size: 12px;
+    padding: 16px 15px;
+    display: block;
+}
+
+#inner-menu a:hover {
+    background: url(../images/menu-hover.png) repeat-x;
 }
