--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,8 @@ h2 {
 
 #sidebar {
     width: 300px;
-    height: 400px;
-    background-color: #b2b2b2;
     float: right;
+    padding-right: 10px;
 }
 
 #content {
@@ -113,4 +112,83 @@ h2 {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #aaaaaa;
     margin: 0 0 3px 0;
+}
+
+#sidebar h3 {
+    font-size: 15px;
+    color: #999999;
+    text-transform: uppercase;
+    font-weight: bold;
+    background: url(../images/sidebar-h3-bg.png) repeat-x 0 5px;
+    padding-left: 22px;
+    margin-top: 26px;
+    margin-bottom: 25px;
+}
+
+#sidebar h3 span {
+    background: url(../images/main-bg.jpg);
+    padding: 0 7px;
+}
+
+#sidebar form {
+    width: 220px;
+    margin: 0 auto;
+}
+
+.text-field {
+    width: 140px;
+    height: 31px;
+    background: url(../images/input-bg.png) no-repeat;
+    float: left;
+}
+
+.text-field input {
+    background: none;
+    border: none;
+    font-size: 12px;
+    color: #b1b1b1;
+    padding: 8px 10px;
+    width: 120px;
+    height: 15px;
+    outline: 0;
+}
+
+.first-row, .second-row {
+    width: 270px;
+    margin: 0 auto;
+}
+
+.left img, .left {
+    float: left;
+    display: block;
+}
+
+.right img, .right {
+    float: right;
+    display: block;
+}
+
+.second-row {
+    margin-top: 14px;
+}
+
+#categories ul {
+    width: 140px;
+}
+
+#categories ul li {
+    border-top: 1px dashed #e3e3e3;
+    padding: 9px 0;
+}
+
+#categories ul li:first-child {
+    border: none;
+}
+
+#categories ul li a {
+    font-weight: bold;
+}
+
+#categories h3 {
+    margin-bottom: 14px;
 }
